--- a/about.html
+++ b/about.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Detail information about Front-End developer - Tetiana Breslavska</title>
+        <meta
+      name="description"
+      content="Contacts and detail information about Front-End developer - Tetiana Breslavska"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,13 +20,12 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="src/style.css" />
-    <title>About Tetiana Breslavska</title>
+    <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Developer</a>
+        <a class="navbar-brand" href="/" title="Tetiana Breslavska's (developer) site">Developer</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,21 +40,21 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">
+              <a class="nav-link" aria-current="page" href="/" title="Tetiana Breslavska's (developer) site">
                 Home
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About me</a>
+              <a class="nav-link active" href="/about.html" title="More information about developer">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="/about.html#contact" title="Contacts of developer">Contact me</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <h2>About me</h2>
+    <h1 class="title">About me</h1>
     <h3>Front-end developer from Zaporizhzhia, Ukraine</h3>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam
@@ -62,23 +66,23 @@
     <div class="container">
       <div class="row justify-content-between">
         <div class="col-lg-3 substrate p-4 rounded shadow mb-4">
-          <img class="project-image" src="image/tango-site.png" alt="site" />
+          <img class="project-image" src="/image/tango-site.png" alt="Tango project" />
         </div>
         <div class="col-lg-3 substrate p-4 rounded shadow mb-4">
           <img
             class="project-image"
-            src="image/Screenshot 2023-10-15 102638.png"
-            alt="site"
+            src="/image/weather-app.png"
+            alt="Weather App"
           />
         </div>
         <div class="col-lg-3 substrate p-4 rounded shadow mb-4">
-          <img class="project-image" src="image/WgM8-yogurt.png" alt="site" />
+          <img class="project-image" src="/image/yogurt-app.png" alt="Yogurt App" />
         </div>
       </div>
     </div>
     <div id="contact">
       <h2>📮 Contact me</h2>
-      <a href="mailto:tvk.koba@gmail.com" class="email-link">
+      <a href="mailto:tvk.koba@gmail.com" class="email-link" title="Contact developer - Tetiana Breslavska">
         tvk.koba@gmail.com
       </a>
     </div>
