Add link to Readme

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/src/style.css" />
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     
@@ -55,7 +55,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="/about.html"
+                  href="about.html"
                   title="More information about developer"
                   >About me</a
                 >
@@ -63,7 +63,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="/about.html#contact"
+                  href="about.html#contact"
                   title="Contacts of developer"
                   >Contact me</a
                 >
@@ -80,13 +80,13 @@
       </h3>
       <div class="navigation-links">
         <a
-          href="/about.html"
+          href="about.html"
           class="about-link button"
           title="More information about developer"
           >About me</a
         >
         <a
-          href="/about.html#contact"
+          href="about.html#contact"
           class="contact-link button"
           title="Contacts of developer"
           >Contact me</a
@@ -97,7 +97,7 @@
           <div class="col-md-6 substrate p-4 rounded">
             <img
               class="project-image"
-              src="/image/tango-site.png"
+              src="image/tango-site.png"
               alt="Tango project"
             />
           </div>
@@ -120,7 +120,7 @@
           <div class="col-md-6 substrate p-4 rounded">
             <img
               class="project-image"
-              src="/image/weather-app.png"
+              src="image/weather-app.png"
               alt="Weather App"
             />
           </div>
@@ -143,7 +143,7 @@
           <div class="col-md-6 substrate p-4 rounded">
             <img
               class="project-image"
-              src="/image/yogurt-app.png"
+              src="image/yogurt-app.png"
               alt="Yogurt App"
             />
           </div>
