--- a/about.html
+++ b/about.html
@@ -20,12 +20,12 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/src/style.css" />
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container">
-        <a class="navbar-brand" href="/" title="Tetiana Breslavska's (developer) site">Developer</a>
+        <a class="navbar-brand" href="index.html" title="Tetiana Breslavska's (developer) site">Developer</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -40,15 +40,15 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/" title="Tetiana Breslavska's (developer) site">
+              <a class="nav-link" aria-current="page" href="index.html" title="Tetiana Breslavska's (developer) site">
                 Home
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/about.html" title="More information about developer">About me</a>
+              <a class="nav-link active" href="about.html" title="More information about developer">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html#contact" title="Contacts of developer">Contact me</a>
+              <a class="nav-link" href="about.html#contact" title="Contacts of developer">Contact me</a>
             </li>
           </ul>
         </div>
@@ -66,17 +66,17 @@
     <div class="container">
       <div class="row justify-content-between">
         <div class="col-lg-3 substrate p-4 rounded shadow mb-4">
-          <img class="project-image" src="/image/tango-site.png" alt="Tango project" />
+          <img class="project-image" src="image/tango-site.png" alt="Tango project" />
         </div>
         <div class="col-lg-3 substrate p-4 rounded shadow mb-4">
           <img
             class="project-image"
-            src="/image/weather-app.png"
+            src="image/weather-app.png"
             alt="Weather App"
           />
         </div>
         <div class="col-lg-3 substrate p-4 rounded shadow mb-4">
-          <img class="project-image" src="/image/yogurt-app.png" alt="Yogurt App" />
+          <img class="project-image" src="image/yogurt-app.png" alt="Yogurt App" />
         </div>
       </div>
     </div>
