--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="container">
           <a
             class="navbar-brand"
-            href="/"
+            href="index.html"
             title="Tetiana Breslavska's (developer) site"
             >Developer</a
           >
