Changed the name

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Front-End developer - Tetiana Breslavska</title>
+    <title>Front-End developer</title>
     <meta name="description" content="Portfolio of Front-End developer" />
 
     <link
@@ -27,7 +27,7 @@
           <a
             class="navbar-brand"
             href="index.html"
-            title="Tetiana Breslavska's (developer) site"
+            title="developer's site"
             >Developer</a
           >
           <button
@@ -47,7 +47,7 @@
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  title="Tetiana Breslavska's (developer) site"
+                  title="developer's site"
                   href="/"
                   >Home</a
                 >
@@ -72,8 +72,8 @@
           </div>
         </div>
       </nav>
-      <h2>👋 Hi I'm</h2>
-      <h1>Tetiana Breslavska</h1>
+      <h2>👋 Hi, I'm</h2>
+      <h1>Olena Rudenko</h1>
       <h3>
         <img class="flag" src="image/ukraine-flag.png" alt="ukraine-flag" />
         Front-end developer, based in Ukraine
