--- a/about.html
+++ b/about.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Detail information about Front-End developer - Tetiana Breslavska</title>
+    <title>Detail information about Front-End developer</title>
         <meta
       name="description"
-      content="Contacts and detail information about Front-End developer - Tetiana Breslavska"
+      content="Contacts and detail information about Front-End developer"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -25,7 +25,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container">
-        <a class="navbar-brand" href="index.html" title="Tetiana Breslavska's (developer) site">Developer</a>
+        <a class="navbar-brand" href="index.html" title="developer's site">Developer</a>
         <button
           class="navbar-toggler"
           type="button"
