--- a/index.html
+++ b/index.html
@@ -18,149 +18,223 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/a71c7718d4.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container">
-          <a
-            class="navbar-brand"
-            href="index.html"
-            title="developer's site"
-            >Developer</a
-          >
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  title="developer's site"
-                  href="/"
-                  >Home</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  href="about.html"
-                  title="More information about developer"
-                  >About me</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  href="about.html#contact"
-                  title="Contacts of developer"
-                  >Contact me</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <h2>👋 Hi, I'm</h2>
-      <h1>Olena Rudenko</h1>
-      <h3>
+    <header class="header">
+      <span>Hi, I'm </span>
+      <h1>
+        Tetiana Breslavska
+        <br>
         <img class="flag" src="image/ukraine-flag.png" alt="ukraine-flag" />
-        Front-end developer, based in Ukraine
-      </h3>
-      <div class="navigation-links">
-        <a
-          href="about.html"
-          class="about-link button"
-          title="More information about developer"
-          >About me</a
+        <span class="profession">Junior Front-end developer, based in Ukraine</span>
+      </h1>
+      <a class="button"
+        href="index.html#contact"
+        title="More information about developer"
         >
+        Contact me
+      </a>
+    </header>
+
+    <div class="container mt-4 mb-5">
+      <div class="row">
+        <div class="col-lg-6 substrate p-4 rounded">
+          <img class="project-image" src="image/bookland.png" alt="website" />
+        </div>
+        <div class="col-lg-6">
+          <h2>Book Store App</h2>
+          <p class="app-descr-text">
+            Book Store app is an online platform designed specifically for
+            programming enthusiasts. Offering a comprehensive collection of
+            programming books, tutorials, and resources, this application caters
+            to individuals looking to enhance their coding skills or delve into
+            new programming languages and technologies.
+          </p>
+          <a
+            href="https://tetiana-breslavska.github.io/x-course-task"
+            class="launch-button button"
+            title="Launch Book Store App"
+            target="_blank"
+            >Launch Book Store App</a
+          >
+        </div>
+      </div>
+    </div>
+    <div class="container mt-4 mb-5">
+      <div class="row revers">
+        <div class="col-lg-6 substrate p-4 rounded">
+          <img
+            class="project-image"
+            src="image/weather-app.png"
+            alt="website"
+          />
+        </div>
+        <div class="col-lg-6">
+          <h2>Weather App</h2>
+          <p class="app-descr-text">
+            The Weather App is your go-to solution for staying informed about
+            current and forecasted weather conditions worldwide. With its
+            intuitive interface and comprehensive features, this application
+            provides users with accurate weather data, forecasts, and alerts to
+            plan their activities and stay prepared for any weather event.
+          </p>
+          <a
+            href="https://weather-app-nice.netlify.app/"
+            class="launch-button button"
+            title="Launch Weather App"
+            target="_blank"
+            >Launch Weather App</a
+          >
+        </div>
+      </div>
+    </div>
+    <div class="container mt-5 mb-5">
+      <div class="row">
+        <div class="col-lg-6 substrate p-4 rounded">
+          <img class="project-image" src="image/todo-app.png" alt="website" />
+        </div>
+        <div class="col-lg-6">
+          <h2>ToDo App</h2>
+          <p class="app-descr-text">
+            The ToDo App is ultimate task management solution, designed to help
+            you stay organized, focused, and productive in your personal and
+            professional life. With its user-friendly interface and robust
+            features, this application empowers users to efficiently manage
+            tasks, set priorities, and track progress towards achieving their
+            goals.
+          </p>
+          <a
+            href="https://todolistappka.netlify.app/"
+            class="launch-button button"
+            title="Launch Yogurt App"
+            target="_blank"
+            >Launch ToDo App</a
+          >
+        </div>
+      </div>
+    </div>
+    <div class="container mt-5 mb-5">
+      <div class="row revers">
+        <div class="col-lg-6 substrate p-4 rounded">
+          <img class="project-image" src="image/mirada.png" alt="website" />
+        </div>
+        <div class="col-lg-6">
+          <h2>Mirada Shop</h2>
+          <p class="app-descr-text">
+            The Mirada Shop is internet store for your shopping experience. With
+            its sleek interface and innovative features, this app brings
+            convenience, personalization, and efficiency to your retail journey
+            to fashion.
+          </p>
+          <a
+            href="https://tetiana-breslavska.github.io/Mirada-shop/"
+            class="launch-button button"
+            title="Launch Mirada Shop"
+            target="_blank"
+            >Launch Mirada Shop</a
+          >
+        </div>
+      </div>
+    </div>
+    <div class="container mt-5 mb-5">
+      <div class="row">
+        <div class="col-lg-6 substrate p-4 rounded">
+          <img class="project-image" src="image/my-blog.png" alt="website" />
+        </div>
+        <div class="col-lg-6">
+          <h2>Travel Blog</h2>
+          <p class="app-descr-text">
+            Embark on a journey with the Travel Blog, where every tap opens up a
+            world of adventure, exploration, and boundless inspiration. Whether
+            you're dreaming of scaling towering mountains, strolling through
+            ancient cities, or lounging on sun-kissed beaches, this app is your
+            passport to unforgettable experiences.
+          </p>
+          <a
+            href="https://tetiana-breslavska.github.io/javascript-blog/"
+            class="launch-button button"
+            title="Launch Travel Blog"
+            target="_blank"
+            >Launch Travel Blog</a
+          >
+        </div>
+      </div>
+    </div>
+    <div class="container mt-5 mb-5">
+      <div class="row revers">
+        <div class="col-lg-6 substrate p-4 rounded">
+          <img
+            class="project-image"
+            src="image/photography.png"
+            alt="website"
+          />
+        </div>
+        <div class="col-lg-6">
+          <h2>Photography</h2>
+          <p class="app-descr-text">
+            Designed a personal portfolio website for a photographer using
+            modern web technologies and design. The website allows the
+            photographer to showcase their work in the best light, with a
+            selection of stunning images and easy navigation for visitors.
+          </p>
+          <a
+            href="https://splendid-malasada-fdbdaf.netlify.app/"
+            class="launch-button button"
+            title="Launch Photography"
+            target="_blank"
+            >Launch Photography</a
+          >
+        </div>
+      </div>
+    </div>
+    <div class="container mt-5 mb-5">
+      <div class="row">
+        <div class="col-lg-6 substrate p-4 rounded">
+          <img class="project-image" src="image/email.png" alt="website" />
+        </div>
+        <div class="col-lg-6">
+          <h2>Email Design</h2>
+          <p class="app-descr-text">
+            Responsive and cross-browser template showcase experience in email
+            markup using HTML and CSS, best practices for compatibility with
+            various email clients and devices
+          </p>
+          <a
+            href="https://tetiana-breslavska.github.io/email-mockup-testTask/"
+            class="launch-button button"
+            title="Launch Email Design"
+            target="_blank"
+            >Launch Email Design</a
+          >
+        </div>
+      </div>
+    </div>
+
+    <div id="contact">
+      <h2>📮 Contact me</h2>
+      <div class="text-center">
         <a
-          href="about.html#contact"
-          class="contact-link button"
-          title="Contacts of developer"
-          >Contact me</a
+          href="mailto:tvk.koba@gmail.com"
+          class="contact-links"
+          title="Contact developer - Tetiana Breslavska"
         >
+          <i class="fa-solid fa-envelope"></i>
+        </a>
+        <a href="https://t.me/Tetiana_Breslavska" class="contact-links">
+          <i class="fa-brands fa-telegram"></i>
+        </a>
+        <a
+          href="https://www.linkedin.com/in/tetiana-breslavska/"
+          class="contact-links"
+        >
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
       </div>
-      <div class="container mt-4 mb-5">
-        <div class="row">
-          <div class="col-md-6 substrate p-4 rounded">
-            <img
-              class="project-image"
-              src="image/tango-site.png"
-              alt="Tango project"
-            />
-          </div>
-          <div class="col-md-6">
-            <h2>Tango App</h2>
-            <p class="app-descr-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
-            </p>
-            <a href="#" class="launch-button button" title="Launch Tango App"
-              >Launch Tango App</a
-            >
-          </div>
-        </div>
-      </div>
-      <div class="container mt-4 mb-5">
-        <div class="row revers">
-          <div class="col-md-6 substrate p-4 rounded">
-            <img
-              class="project-image"
-              src="image/weather-app.png"
-              alt="Weather App"
-            />
-          </div>
-          <div class="col-md-6">
-            <h2>Weather App</h2>
-            <p class="app-descr-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
-            </p>
-            <a href="#" class="launch-button button" title="Launch Weather App"
-              >Launch Weather App</a
-            >
-          </div>
-        </div>
-      </div>
-      <div class="container mt-5 mb-5">
-        <div class="row">
-          <div class="col-md-6 substrate p-4 rounded">
-            <img
-              class="project-image"
-              src="image/yogurt-app.png"
-              alt="Yogurt App"
-            />
-          </div>
-          <div class="col-md-6">
-            <h2>Yogurt App</h2>
-            <p class="app-descr-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
-            </p>
-            <a href="#" class="launch-button button" title="Launch Yogurt App"
-              >Launch Yogurt App</a
-            >
-          </div>
-        </div>
-      </div>
-    
+    </div>
   </body>
 </html>
